Convert manufacturer XML export to support new export framework

--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -171,16 +171,18 @@
     <Compile Include="Customers\CustomerRegisteredEvent.cs" />
     <Compile Include="DataExchange\ExportConfigurationInfo.cs" />
     <Compile Include="DataExchange\ExportProvider\ExportOrderXlsxProvider.cs" />
+    <Compile Include="DataExchange\ExportProvider\ExportManufacturerXmlProvider.cs" />
     <Compile Include="DataExchange\ExportProvider\ExportProductXlsxProvider.cs" />
     <Compile Include="DataExchange\ExportProvider\ExportProductXmlProvider.cs" />
     <Compile Include="DataExchange\ExportProvider\ExportOrderXmlProvider.cs" />
+    <Compile Include="DataExchange\ExportTask\ExportDataContextManufacturer.cs" />
     <Compile Include="DataExchange\ExportTask\ExportProfileTaskContext.cs" />
     <Compile Include="DataExchange\ExportExecuteResult.cs" />
     <Compile Include="DataExchange\ExportXmlHelper.cs" />
     <Compile Include="DataExchange\ISyncMappingService.cs" />
     <Compile Include="DataExchange\SyncMappingService.cs" />
-    <Compile Include="DataExchange\ExportTask\ExportOrderDataContext.cs" />
-    <Compile Include="DataExchange\ExportTask\ExportProductDataContext.cs" />
+    <Compile Include="DataExchange\ExportTask\ExportDataContextOrder.cs" />
+    <Compile Include="DataExchange\ExportTask\ExportDataContextProduct.cs" />
     <Compile Include="DataExchange\ExportExecuteContext.cs" />
     <Compile Include="DataExchange\ExportExtensions.cs" />
     <Compile Include="DataExchange\ExportTask\ExportProfileTask.cs" />
