Convert category XML export to support new export framework

--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -170,11 +170,13 @@
     <Compile Include="Common\UAParserUserAgent.cs" />
     <Compile Include="Customers\CustomerRegisteredEvent.cs" />
     <Compile Include="DataExchange\ExportConfigurationInfo.cs" />
+    <Compile Include="DataExchange\ExportProvider\ExportCategoryXmlProvider.cs" />
     <Compile Include="DataExchange\ExportProvider\ExportOrderXlsxProvider.cs" />
     <Compile Include="DataExchange\ExportProvider\ExportManufacturerXmlProvider.cs" />
     <Compile Include="DataExchange\ExportProvider\ExportProductXlsxProvider.cs" />
     <Compile Include="DataExchange\ExportProvider\ExportProductXmlProvider.cs" />
     <Compile Include="DataExchange\ExportProvider\ExportOrderXmlProvider.cs" />
+    <Compile Include="DataExchange\ExportTask\ExportDataContextCategory.cs" />
     <Compile Include="DataExchange\ExportTask\ExportDataContextManufacturer.cs" />
     <Compile Include="DataExchange\ExportTask\ExportProfileTaskContext.cs" />
     <Compile Include="DataExchange\ExportExecuteResult.cs" />
