--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -172,6 +172,7 @@
     <Compile Include="DataExchange\ExportConfigurationInfo.cs" />
     <Compile Include="DataExchange\ExportProvider\ExportCustomerXmlProvider.cs" />
     <Compile Include="DataExchange\ExportProvider\ExportCategoryXmlProvider.cs" />
+    <Compile Include="DataExchange\ExportProvider\ExportCustomerXlsxProvider.cs" />
     <Compile Include="DataExchange\ExportProvider\ExportOrderXlsxProvider.cs" />
     <Compile Include="DataExchange\ExportProvider\ExportManufacturerXmlProvider.cs" />
     <Compile Include="DataExchange\ExportProvider\ExportProductXlsxProvider.cs" />
@@ -329,7 +330,6 @@
     <Compile Include="Discounts\DiscountService.cs" />
     <Compile Include="Discounts\IDiscountRequirementRule.cs" />
     <Compile Include="Discounts\IDiscountService.cs" />
-    <Compile Include="ExportImport\ExportManager.cs" />
     <Compile Include="ExportImport\ImportManager.cs" />
     <Compile Include="Authentication\FormsAuthenticationService.cs" />
     <Compile Include="Forums\ForumService.cs" />
@@ -349,7 +349,6 @@
     <Compile Include="Customers\ICustomerService.cs" />
     <Compile Include="Directory\IMeasureService.cs" />
     <Compile Include="Directory\IStateProvinceService.cs" />
-    <Compile Include="ExportImport\IExportManager.cs" />
     <Compile Include="ExportImport\IImportManager.cs" />
     <Compile Include="Localization\LocalizationExtentions.cs" />
     <Compile Include="Directory\MeasureService.cs" />
