--- a/src/Presentation/SmartStore.Web/Administration/packages.config
+++ b/src/Presentation/SmartStore.Web/Administration/packages.config
@@ -4,6 +4,7 @@
   <package id="Autofac" version="3.4.1" targetFramework="net45" />
   <package id="Autofac.Mvc5" version="3.3.1" targetFramework="net45" />
   <package id="AutoMapper" version="3.2.1" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="FluentValidation" version="5.0.0.1" targetFramework="net45" />
   <package id="jQuery" version="1.8.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
