--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -191,6 +191,7 @@
     <trace autoflush="true" indentsize="4" />
   </system.diagnostics>
   <runtime>
+    <gcServer enabled="true" />
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <probing privatePath="Plugins/bin/" />
       <dependentAssembly>
