--- a/src/Presentation/SmartStore.Web/Administration/sitemap.config
+++ b/src/Presentation/SmartStore.Web/Administration/sitemap.config
@@ -138,7 +138,7 @@
       <siteMapNode id="queued-emails" iconClass="envelope" title="Queued emails" resKey="Admin.System.QueuedEmails" permissionNames="ManageMessageQueue" controller="QueuedEmail" action="List" area="Admin" />
       <siteMapNode id="maintenance" iconClass="database" title="Maintenance" resKey="Admin.System.Maintenance" permissionNames="ManageMaintenance" controller="Common" action="Maintenance" area="Admin" />
       <siteMapNode id="scheduled tasks" iconClass="clock-o" title="Schedule tasks" resKey="Admin.System.ScheduleTasks" permissionNames="ManageScheduleTasks" controller="ScheduleTask" action="List" area="Admin" />
-      <siteMapNode id="seo-names" iconClass="search" title="Search engine friendly names" resKey="Admin.System.SeNames" permissionNames="ManageMaintenance" controller="Common" action="SeNames" area="Admin" />
+      <siteMapNode id="seo-names" iconClass="search" title="Search engine friendly names" resKey="Admin.System.SeNames" permissionNames="ManageMaintenance" controller="UrlRecord" action="List" area="Admin" />
       <siteMapNode id="warnings" iconClass="exclamation-triangle" title="Warnings" resKey="Admin.System.Warnings" controller="Common" action="Warnings" area="Admin" />
       <siteMapNode id="system-info" iconClass="info-circle" title="System information" resKey="Admin.System.SystemInfo" controller="Common" action="SystemInfo" area="Admin" />
     </siteMapNode>
