SEO Names: Link to filter all slugs per entity on entity's edit page

--- a/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
+++ b/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
@@ -538,6 +538,7 @@
     <Content Include="Views\UrlRecord\List.cshtml" />
     <Content Include="Views\UrlRecord\Edit.cshtml" />
     <Content Include="Views\UrlRecord\_CreateOrUpdate.cshtml" />
+    <Content Include="Views\UrlRecord\NamesPerEntity.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\admin.less" />
