Web-API: Added OData endpoint for shipment items

--- a/src/Plugins/SmartStore.WebApi/SmartStore.WebApi.csproj
+++ b/src/Plugins/SmartStore.WebApi/SmartStore.WebApi.csproj
@@ -215,6 +215,7 @@
     <Compile Include="Controllers\OData\ProductVariantAttributesController.cs" />
     <Compile Include="Controllers\OData\QuantityUnitsController.cs" />
     <Compile Include="Controllers\OData\PaymentMethodsController.cs" />
+    <Compile Include="Controllers\OData\ShipmentItemsController.cs" />
     <Compile Include="Controllers\OData\SyncMappingsController.cs" />
     <Compile Include="Controllers\OData\TierPricesController.cs" />
     <Compile Include="Controllers\OData\ProductAttributesController.cs" />
