Export Framework: Refactored enums

--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -166,7 +166,7 @@
     <Compile Include="Domain\DataExchange\ExportProjection.cs" />
     <Compile Include="Domain\Directory\QuantityUnit.cs" />
     <Compile Include="Domain\Common\RestrictionContextTypes.cs" />
-    <Compile Include="Domain\DataExchange\ExportCore.cs" />
+    <Compile Include="Domain\DataExchange\ExportEnums.cs" />
     <Compile Include="Domain\DataExchange\ExportFilter.cs" />
     <Compile Include="Domain\DataExchange\ExportProfile.cs" />
     <Compile Include="Domain\Messages\EmailAttachmentStorageLocation.cs" />
