--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -192,7 +192,7 @@
     <Compile Include="DataExchange\ExportExecuteContext.cs" />
     <Compile Include="DataExchange\ExportExtensions.cs" />
     <Compile Include="DataExchange\ExportTask\ExportProfileTask.cs" />
-    <Compile Include="DataExchange\ExportAttributes.cs" />
+    <Compile Include="DataExchange\ExportFeaturesAttribute.cs" />
     <Compile Include="DataExchange\ExportSegmenter.cs" />
     <Compile Include="Directory\QuantityUnitService.cs" />
     <Compile Include="Directory\IQuantityUnitService.cs" />
