--- a/src/Plugins/SmartStore.GoogleMerchantCenter/SmartStore.GoogleMerchantCenter.csproj
+++ b/src/Plugins/SmartStore.GoogleMerchantCenter/SmartStore.GoogleMerchantCenter.csproj
@@ -42,6 +42,7 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -175,7 +176,7 @@
     <Compile Include="Extensions\MiscExtensions.cs" />
     <Compile Include="GoogleMerchantCenterFeedPlugin.cs" />
     <Compile Include="Models\ProfileConfigurationModel.cs" />
-    <Compile Include="Providers\ProductExportXmlProvider.cs" />
+    <Compile Include="Providers\GmcExportXmlProvider.cs" />
     <Compile Include="Models\FeedGoogleMerchantCenterModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RouteProvider.cs" />
