--- a/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
+++ b/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
@@ -313,7 +313,7 @@
     <Compile Include="Mvc\XmlDownloadResult.cs" />
     <Compile Include="Extensions\Extensions.cs" />
     <Compile Include="Extensions\HtmlExtensions.cs" />
-    <Compile Include="Mvc\ImageResult.cs" />
+    <Compile Include="Mvc\PictureResult.cs" />
     <Compile Include="Mvc\IModelAttribute.cs" />
     <Compile Include="Localization\ILocalizedModel.cs" />
     <Compile Include="Localization\ILocalizedModelLocal.cs" />
