--- a/src/Tests/SmartStore.Core.Tests/SmartStore.Core.Tests.csproj
+++ b/src/Tests/SmartStore.Core.Tests/SmartStore.Core.Tests.csproj
@@ -84,6 +84,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ComponentModel\ExpandoTests.cs" />
+    <Compile Include="PerformanceTests.cs" />
     <Compile Include="TopologicSortTests.cs" />
     <Compile Include="WildcardTests.cs" />
     <Compile Include="Domain\Shipping\ShippingOptionListTypeConverterTests.cs" />
