Started to build up DataExportTask

--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -168,6 +168,7 @@
     <Compile Include="DataExchange\Deployment\IFilePublisher.cs" />
     <Compile Include="DataExchange\ExportConfigurationInfo.cs" />
     <Compile Include="DataExchange\ExportProviderBase.cs" />
+    <Compile Include="DataExchange\Internal\DataExportTaskToDynamic.cs" />
     <Compile Include="DataExchange\Providers\SubscriberCsvExportProvider.cs" />
     <Compile Include="DataExchange\Providers\CustomerXmlExportProvider.cs" />
     <Compile Include="DataExchange\Providers\CategoryXmlExportProvider.cs" />
@@ -180,7 +181,7 @@
     <Compile Include="DataExchange\Internal\CategoryExportContext.cs" />
     <Compile Include="DataExchange\Internal\CustomerExportContext.cs" />
     <Compile Include="DataExchange\Internal\ManufacturerExportContext.cs" />
-    <Compile Include="DataExchange\ExportTask\ExportProfileTaskContext.cs" />
+    <Compile Include="DataExchange\Internal\DataExportTaskContext.cs" />
     <Compile Include="DataExchange\DataExportResult.cs" />
     <Compile Include="DataExchange\ExportXmlHelper.cs" />
     <Compile Include="DataExchange\IDataExporter.cs" />
@@ -195,7 +196,7 @@
     <Compile Include="DataExchange\ExportFeaturesAttribute.cs" />
     <Compile Include="DataExchange\ExportDataSegmenter.cs" />
     <Compile Include="DataExchange\_Pseudo\AdminController.cs" />
-    <Compile Include="DataExchange\_Pseudo\DataExportTask.cs" />
+    <Compile Include="DataExchange\Internal\DataExportTask.cs" />
     <Compile Include="Directory\QuantityUnitService.cs" />
     <Compile Include="Directory\IQuantityUnitService.cs" />
     <Compile Include="DataExchange\ExportProfileService.cs" />
