(Perf) more refactoring

--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -558,6 +558,7 @@
     <Compile Include="Utilities\DictionaryConverter.cs" />
     <Compile Include="Utilities\FileDownloadManager.cs" />
     <Compile Include="Utilities\FileSystemHelper.cs" />
+    <Compile Include="Utilities\HashCodeCombiner.cs" />
     <Compile Include="Utilities\Inflector.cs" />
     <Compile Include="Utilities\Prettifier.cs" />
     <Compile Include="Utilities\Range.cs" />
